@@ -1,3 +1,9 @@
+2002-06-09  Cristy  <cristy@mystic.es.dupont.com>
+	* Label color could not be set (bug report by Ron Savage).
+
+2002-06-06  Cristy  <cristy@mystic.es.dupont.com>
+	* ImageMagick, version 5.4.6-1 released.
+
 2002-06-05  Cristy  <cristy@mystic.es.dupont.com>
 	* Added -encoding option to command line utilities.
 
